--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer components{
+    .background{
+        @apply fixed -z-[1]  inset-0 w-screen min-h-screen;
+    }
+    .background::before{
+        @apply absolute top-0 w-full  h-full z-[2];
+        content:"";
+        background:radial-gradient(
+            ellipse at center,
+             rgba(255, 254, 254, 0.1) 0%, 
+             rgba(255, 255, 255, 1) 100%, 
+             );
+             pointer-events: none;
+    }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+    .background::before{
+        @apply absolute top-0 w-full  h-full z-[1]  opacity-20;
+        content:"";
+        z-index: 1;
+             pointer-events: none;
+    }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    .gradient-blur{
+        background: rgba(237, 117, 200, 1);
+        max-width:800px;
+        background: conic-gradient(from 40deg,rgb(65, 171, 237),rgb(83,22,238));
+        width:100%
+    }
 }
