--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,40 @@
 @tailwind utilities;
 
 @layer components{
-    .background{
-        @apply fixed -z-[1]  inset-0 w-screen min-h-screen;
-    }
-    .background::before{
-        @apply absolute top-0 w-full  h-full z-[2];
-        content:"";
-        background:radial-gradient(
-            ellipse at center,
-             rgba(255, 254, 254, 0.1) 0%, 
-             rgba(255, 255, 255, 1) 100%, 
-             );
-             pointer-events: none;
-    }
+  .background{
+      @apply fixed -z-[1]  inset-0 w-screen min-h-screen;
+  }
+  .background::before{
+      @apply absolute top-0 w-full  h-full z-[2];
+      content:"";
+      background:radial-gradient(
+          ellipse at center,
+           rgba(255, 254, 254, 0.1) 0%, 
+           rgba(255, 255, 255, 1) 100%, 
+           );
+           pointer-events: none;
+  }
 
-    .background::before{
-        @apply absolute top-0 w-full  h-full z-[1]  opacity-20;
-        content:"";
-        z-index: 1;
-             pointer-events: none;
-    }
+  .background::before{
+      @apply absolute top-0 w-full  h-full z-[1] bg-[url('/images/grid.png')] bg-cover opacity-20;
+      content:"";
+      filter:invert(1);
+      z-index: 1;
+           pointer-events: none;
+  }
 
-    .gradient-blur{
-        background: rgba(237, 117, 200, 1);
-        max-width:800px;
-        background: conic-gradient(from 40deg,rgb(65, 171, 237),rgb(83,22,238));
-        width:100%
-    }
+  .gradient-blur{
+      background: rgb(128, 4, 89);
+      max-width:800px;
+      background: conic-gradient(from 40deg,rgb(38, 119, 170),rgb(24, 2, 78));
+      width:100%;
+      height:100%;
+      filter: blur(120px); 
+      position: absolute;
+      top:20px;
+      left:20%;
+      z-index: 3;
+      opacity:0.2;
+      pointer-events:none;   
+  }
 }
